frontend/public/stylesheets/footer.css
.footer {
    background: #d0d0d0;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: flex-end;
}

.about-us {
  text-transform: uppercase;
  font-size: 15px;

  cursor: pointer;
}

.about-us:hover {
  color: green;
}

.about-box {
  font-family: Arial;
  width: 600px;
  height: 450px;
  padding: 10px;
  background: #d0d0d0;
  border-radius: 10px;
  border-color: 2px solid black;
  box-shadow: -20px 20px 20px black;

  box-sizing: border-box;

  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.about-box h2 {
  text-transform: uppercase;
  font-size: 40px;
}

.persons-box {
  box-sizing: border-box;
  width: 100%;
  height: 30%;
  display: flex;
}

.about-person {
  width: 100%;
  height: 100%;
  margin: 0 20px;

  border-radius: 10px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  font-size: 16px;
  font-weight: 700;
}

.about-person:hover {
  background-color: rgba(0, 128, 0, 0.301);
}

.about-person:hover .about-person-name {
  text-decoration: underline;
}

.about-logos {
  display: flex;
}

.logo {
  display: inline-block;
  background-size: 25px 25px;
  background-repeat: no-repeat;
  vertical-align: bottom;
  overflow: hidden;
  height: 0;
  width: 25px;
  padding-top: 25px;
  margin: 5px;
  cursor: pointer;
}

.logo:hover {
  transform: scale(1.2);
}

.github {
  background-image: url("../game/github.png");
}

.linkedin {
  background-image: url("../game/linkedin.png");
}

.about-story{
  padding: 0 20px 0 20px;
  line-height: 1.5;
}

